Added nickname, Fixed KasaPlug

--- a/src/kenzy/web/login.html
+++ b/src/kenzy/web/login.html
@@ -115,7 +115,7 @@
 </head>
 <body>
 <div class="page_header">
-	<div class="title">KENZY.Ai<small>[__APP_VERSION__]</small></div>
+	<div class="title"><img src="favicon.svg" width="18" height="18" valign="middle" />  KENZY.Ai<small>[__APP_VERSION__]</small></div>
 </div>
 <div class="login_container">
 	<form action="/auth" method="post">
