--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -476,7 +476,7 @@
 </div>
 <div class="page_header">
 	<a href="#" id="bars"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"/></svg></a>
-	<div class="title">KENZY.Ai<small>[__APP_VERSION__]</small></div>
+	<div class="title"><img src="favicon.svg" width="18" height="18" valign="middle" /> KENZY.Ai<small>[__APP_VERSION__]</small></div>
 </div>
 <div id="sidebar" class="page_sidebar inactive">
 	<a href="#" class="button active" rel="#devices" id="devices-button">
