--- a/src/kenzy/web/template.html
+++ b/src/kenzy/web/template.html
@@ -14,7 +14,7 @@ html, body { padding: 0; margin: 0; font-size: 12pt; color: #000000; background-
 page, section, header, content { display: block; }
 page { display: block; }
 sidebar { display: block; position: fixed; top: 0; left: 0; width: 260px; height: 100%; padding: 20px; }
-sidebar > content { display: block; background-image: linear-gradient(165deg, #42424a 0%, #191919 100%); COLOR: #ffffff; border-radius: 6px; max-height: 100%;  }
+sidebar > content { display: block; background-image: linear-gradient(165deg, #42424a 0%, #191919 100%); COLOR: #ffffff; border-radius: 6px; max-height: 90%; overflow-y: auto;  }
 sidebar section { padding: 15px; }
 sidebar button { background: transparent; border: 0; display: block; width: 100%; height: 48px; line-height: 48px; color: #ffffff; border-radius: 6px; font-size: 0.95rem; margin-bottom: 2px; cursor: pointer; text-align: left; padding: 0 15px; }
 sidebar button icon { display: inline-block; width: 24px; height: 24px; vertical-align: middle; margin-right:8px; background-repeat: no-repeat; background-position: center 0; background-size: 20px 20px; }
