Tweaking font sizes in template

--- a/src/kenzy/web/template.html
+++ b/src/kenzy/web/template.html
@@ -77,6 +77,7 @@ td group { display: block; width: 66px; float: right; }
 td icon.disable { opacity: 0.3; }
 
 #main table tr:nth-child(even) td { background-color: rgba(0,0,0, .02); }
+monospace { font-family: 'Courier New', Courier, monospace; }
 
 .text-left { text-align: left; }
 .text-right { text-align: right; }
@@ -84,7 +85,7 @@ td icon.disable { opacity: 0.3; }
 #secondary { background: linear-gradient(rgba(0,0,0,.2), transparent); background-size: 100% 30px; background-repeat: no-repeat; }
 #secondary > header { font-weight: bold; text-transform: uppercase; font-size: 0.9rem; text-shadow: 1px 1px 2px rgba(255,255,255, .6); }
 #secondary > content > table { width: 100%; }
-#secondary > content > table td { line-height: 1.25rem; padding-top: 10px; padding-bottom: 10px;  }
+#secondary > content > table td { line-height: 1.25rem; padding-top: 10px; padding-bottom: 10px; font-size: 1rem; }
 #secondary > content > table td > content { height: 1.25rem; }
 .time-col { width: 120px; }
 
@@ -261,27 +262,35 @@ footer a:hover { color: #000; }
                         <tr>
                             <td valign="top">
                                 <content>
-                                    This is a long test long long test
+                                    <monospace>
+                                        This is a long test long long test
+                                    </monospace>
                                 </content>
                             </td>
                             <td valign="top">
-                                This is a long test long long test
-                                This is a long test long long test
-                                This is a long test long long test
-                                This is a long test long long test
+                                <monospace>
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                </monospace>
                             </td>
                         </tr>
                         <tr>
                             <td valign="top">
                                 <content>
-                                    This is a long test long long test
+                                    <monospace>
+                                        This is a long test long long test
+                                    </monospace>
                                 </content>
                             </td>
                             <td valign="top">
-                                This is a long test long long test
-                                This is a long test long long test
-                                This is a long test long long test
-                                This is a long test long long test
+                                <monospace>
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                    This is a long test long long test
+                                </monospace>
                             </td>
                         </tr>
                     </tbody>
