--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -35,39 +35,40 @@ sidebar button.active { background: linear-gradient(195deg, #de6c3c 0%, #dc5c25 
 sidebar section header { font-size: 0.8rem; text-transform: uppercase; text-align: center; padding: 15px; }
 sidebar title { display: block; border-bottom: 1px solid rgba(255,255,255, .2); padding: 15px; text-align: center; font-size: 1.2rem; line-height: 36px; }
 
-page > content > section { display: block; padding: 20px calc(100% - 1280px) 20px 300px; }
-page > content > section:first-child { display: block; background-color: #f0f2f5; }
+page > content.page-section > section { display: block; padding: 20px calc(100% - 1280px) 20px 300px; }
+page > content.page-section > section:first-child { display: block; background-color: #f0f2f5; }
 page > content > section > header { display: block; font-size: 1rem; margin-bottom: 10px; margin-top: 10px; }
 page > content > section > header > title { display: block; font-weight: bold; line-height: 24px; }
 page > content > section > header > subtitle { display: block; font-size: 0.9rem; color: rgba(0, 0, 0, .5); }
 
-#main { padding-right: 20px; padding-top: 10px; }
+.main { padding-right: 20px; padding-top: 10px; }
 
-#main > group { display: block; clear: left; margin: 0 -10px; }
-#main > group > * { display: block; float: left; }
-#main > group.col-3 > * { width: 33.33%; }
-#main > group.col-3 > *:nth-child(2) { width: 33.34%; }
-#main > group.col-2 > * { width: 50%; }
-#main > group.col-4 > * { width: 25%; }
+.main > group { display: block; clear: left; margin: 0 -10px; }
+.main > group > * { display: block; float: left; }
+.main > group.col-1 > * { width: 100%; }
+.main > group.col-3 > * { width: 33.33%; }
+.main > group.col-3 > *:nth-child(2) { width: 33.34%; }
+.main > group.col-2 > * { width: 50%; }
+.main > group.col-4 > * { width: 25%; }
 
-#main > group.col-2l > *:first-child { width: 75%; }
-#main > group.col-2l > *:last-child { width: 25%; }
+.main > group.col-2l > *:first-child { width: 75%; }
+.main > group.col-2l > *:last-child { width: 25%; }
 
-#main gauge { display: block; position: relative; }
-#main gauge > header { display: block; position: relative; height: 6px; width: 100%; }
-#main gauge > header > icon { display: block; position: absolute; height: 32px; width: 32px; left: 24px; z-index: 100; background-color: #42424a; background-repeat: no-repeat; background-size: 16px 16px; background-position: center center; border-radius: 4px; box-shadow: 2px 2px 2px #ccc; }
-#main gauge > header > icon.server { background-image: url(server-solid.svg); }
-#main gauge > header > icon.bolt { background-image: url(bolt-solid.svg); }
-#main gauge > header > icon.expand { background-image: url(expand-solid.svg); }
-#main gauge > header > icon.stopwatch { background-image: url(stopwatch-solid.svg); }
-#main gauge > content { position: relative; display: block; background-color: #ffffff; margin: 10px; z-index: 99; box-shadow: 2px 2px 8px #c4c4c4; border-radius: 10px; background: linear-gradient(#ffffff, #fafafa, #f3f3f3);  }
-#main gauge > content > metric { display: block; padding: 20px 20px 0 20px; text-align: right; font-size: 2rem; font-weight: bold; border-radius: 10px; line-height: 36px; height: 36px; overflow: hidden; }
-#main gauge > content > divider { display: block; background: linear-gradient(90deg, transparent, #cccccc); height: 1px; margin-top: 8px;}
-#main gauge > content > title { display: block; color: #777777; padding-top: 8px; text-align: right; padding: 8px 20px 10px 20px; text-transform: uppercase; font-size: 0.7rem; }
+.main gauge { display: block; position: relative; }
+.main gauge > header { display: block; position: relative; height: 6px; width: 100%; }
+.main gauge > header > icon { display: block; position: absolute; height: 32px; width: 32px; left: 24px; z-index: 100; background-color: #42424a; background-repeat: no-repeat; background-size: 16px 16px; background-position: center center; border-radius: 4px; box-shadow: 2px 2px 2px #ccc; }
+.main gauge > header > icon.server { background-image: url(server-solid.svg); }
+.main gauge > header > icon.bolt { background-image: url(bolt-solid.svg); }
+.main gauge > header > icon.expand { background-image: url(expand-solid.svg); }
+.main gauge > header > icon.stopwatch { background-image: url(stopwatch-solid.svg); }
+.main gauge > content { position: relative; display: block; background-color: #ffffff; margin: 10px; z-index: 99; box-shadow: 2px 2px 8px #c4c4c4; border-radius: 10px; background: linear-gradient(#ffffff, #fafafa, #f3f3f3);  }
+.main gauge > content > metric { display: block; padding: 20px 20px 0 20px; text-align: right; font-size: 2rem; font-weight: bold; border-radius: 10px; line-height: 36px; height: 36px; overflow: hidden; }
+.main gauge > content > divider { display: block; background: linear-gradient(90deg, transparent, #cccccc); height: 1px; margin-top: 8px;}
+.main gauge > content > title { display: block; color: #777777; padding-top: 8px; text-align: right; padding: 8px 20px 10px 20px; text-transform: uppercase; font-size: 0.7rem; }
 
-#main list { display: block; position: relative; }
-#main list > content { display: block; margin: 10px; background-color: #fff; border-radius: 6px; background: linear-gradient(#ffffff, #fafafa, #f3f3f3); box-shadow: 2px 2px 8px #c4c4c4; }
-#main table { width: 100%; }
+.main list { display: block; position: relative; }
+.main list > content { display: block; margin: 10px; background-color: #fff; border-radius: 6px; background: linear-gradient(#ffffff, #fafafa, #f3f3f3); box-shadow: 2px 2px 8px #c4c4c4; }
+.main table { width: 100%; }
 th { text-transform: uppercase; padding: 0 10px; font-size: 0.8rem; color: rgba(0, 0, 0, .7); line-height: 32px; height: 32px; border-bottom: 1px solid rgba(0, 0, 0, .2); }
 td { height: 32px; line-height: 32px; padding: 0 10px 0 10px; font-size: 0.9rem; overflow: hidden; }
 td > content { display: inline-block; height: 32px; width: 100%; overflow: hidden; }
@@ -76,20 +77,26 @@ td icon { display: inline-block; width: 16px; height: 16px; background-repeat: n
 td group { display: block; width: 66px; float: right; }
 td icon.disable { opacity: 0.3; }
 
-#main table tr:nth-child(even) td { background-color: rgba(0,0,0, .02); }
+.main table tr:nth-child(even) td { background-color: rgba(0,0,0, .02); }
 monospace { font-family: 'Courier New', Courier, monospace; }
 
 .text-left { text-align: left; }
 .text-right { text-align: right; }
 
-#secondary { background: linear-gradient(rgba(0,0,0,.2), transparent); background-size: 100% 30px; background-repeat: no-repeat; }
-#secondary > header { font-weight: bold; text-transform: uppercase; font-size: 0.9rem; text-shadow: 1px 1px 2px rgba(255,255,255, .6); }
-#secondary > content > table { width: 100%; }
-#secondary > content > table td { line-height: 1.25rem; padding-top: 10px; padding-bottom: 10px; font-size: 1rem; }
-#secondary > content > table td > content { height: 1.25rem; }
+.secondary { background: linear-gradient(rgba(0,0,0,.2), transparent); background-size: 100% 30px; background-repeat: no-repeat; }
+.secondary > header { font-weight: bold; text-transform: uppercase; font-size: 0.9rem; text-shadow: 1px 1px 2px rgba(255,255,255, .6); }
+.secondary > content > table { width: 100%; }
+.secondary > content > table td { line-height: 1.25rem; padding-top: 10px; padding-bottom: 10px; font-size: 1rem; }
+.secondary > content > table td > content { height: 1.25rem; }
 .time-col { width: 120px; }
 
-#secondary divider { display: block; background: linear-gradient(90deg, transparent, #cccccc, transparent); height: 1px; margin-top: 8px;}
+page > content > section > content > divider { 
+    display: block; 
+    /*background: linear-gradient(90deg, transparent, #cccccc, transparent); */
+    height: 1px; 
+    margin-top: 8px;
+}
+
 footer { display: block; padding: 20px 0 60px 0; text-align: center; font-size: 0.85rem; color: #444; }
 footer a { color: #444; }
 footer a:hover { color: #000; }
@@ -112,7 +119,8 @@ footer a:hover { color: #000; }
 .shortnav ul li a .icon-bars { display: inline-block; height: 48px; width: 30px; background-image: url("bars-solid.svg"); background-repeat: no-repeat; background-position: center 16px; background-size: 20px 20px;  }
 
 @media screen and (max-width: 1024px) {
-    page > content > section { padding: 20px 0 20px 220px; }
+    page > content > section,
+    page > content.page-section > section { padding: 20px 0 20px 220px; }
     sidebar { width: 200px; padding: 0; }
     sidebar > content { height: 100%; max-height: 100%; border-radius: 0px; }
 }
@@ -121,17 +129,18 @@ footer a:hover { color: #000; }
     sidebar { display: none; width: 260px; z-index: 1001; }
     sidebar.active { display: block; }
     sidebar title { line-height: inherit; }
-    page > content > section { padding: 20px 0 20px 20px; }
+    page > content > section,
+    page > content.page-section > section { padding: 20px 0 20px 20px; }
     .shortnav { display: block; }
-    page > content { margin-top: 48px; }
+    page > content.page-section { margin-top: 48px; }
 }
 
 @media screen and (max-width: 768px) {
     sidebar > content > title { text-align: left; padding-left: 30px; }
-    #main > group.col-4 > * { width: 50%; }
-    #main > group.col-2l > *,
-    #main > group.col-2l > *:first-child,
-    #main > group.col-2l > *:last-child { width: 100%; }
+    .main > group.col-4 > * { width: 50%; }
+    .main > group.col-2l > *,
+    .main > group.col-2l > *:first-child,
+    .main > group.col-2l > *:last-child { width: 100%; }
 }
 
 </style>
@@ -191,7 +200,7 @@ $(document).ready(function() {
                 <title>System Overview</title>
                 <subtitle>Dashboard</subtitle>
             </header>
-            <content id="main">
+            <content class="main">
                 <group class="top-row col-4">
                     <gauge>
                         <header><icon class="server"></icon></header>
@@ -309,10 +318,9 @@ $(document).ready(function() {
                 </group>
                 <group></group>
 
-
             </content>
         </section>
-        <section id="secondary">
+        <section class="secondary">
             <header>Recent Logs</header>
             <content>
                 <table>
@@ -359,7 +367,99 @@ $(document).ready(function() {
                         </tr>
                     </tbody>
                 </table>
-
+            </content>
+        </section>
+    </content>
+    <content class="page-section" id="devices" style="display: none;">
+        <section>
+            <header>
+                <title>List of Devices</title>
+                <subtitle>Overview</subtitle>
+            </header>
+            <content class="main">
+                <group class="col-1">
+                    <list>
+                        <content>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Name</th>
+                                        <th class="text-left">Location</th>
+                                        <th>Time</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><content>LNXUSR1</content></td>
+                                        <td><content>Living Room</content></td>
+                                        <td><content>5:15pm</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>LNXUSR1</content></td>
+                                        <td><content>Living Room</content></td>
+                                        <td><content>5:15pm</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>LNXUSR1</content></td>
+                                        <td><content>Living Room</content></td>
+                                        <td><content>5:15pm</content></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </content>
+                    </list>
+                </group>
+                <group></group>
+            </content>
+        </section>
+    </content>
+    <content class="page-section" id="cameras" style="display: none;">
+        <section>
+            <header>
+                <title>List of Cameras</title>
+                <subtitle>Overview</subtitle>
+            </header>
+            <content class="main">
+            test
+            </content>
+        </section>
+    </content>
+    <content class="page-section" id="skills" style="display: none;">
+        <section>
+            <header>
+                <title>List of Skills</title>
+                <subtitle>Overview</subtitle>
+            </header>
+            <content class="main">
+            test
+            </content>
+        </section>
+    </content>
+    <content class="page-section" id="logs" style="display: none;">
+        <section>
+            <header>
+                <title>List of Logs</title>
+                <subtitle>Overview</subtitle>
+            </header>
+            <content class="main">
+            test
+            </content>
+        </section>
+    </content>
+    <content class="page-section" id="settings" style="display: none;">
+        <section>
+            <header>
+                <title>List of Settings</title>
+                <subtitle>Overview</subtitle>
+            </header>
+            <content class="main">
+            test
+            </content>
+        </section>
+    </content>
+    <content>
+        <section>
+            <content>
                 <divider></divider>
                 <footer>
                     KENZY {version} | <a href="https://docs.kenzy.ai">Documentation</a> | <a href="https://kenzy.ai/blog">Blog</a> | <a href="https://github.com/lnxusr1/kenzy/issues">Issues</a>
