--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -61,7 +61,9 @@ page > content > section > header > subtitle { display: block; font-size: 0.9rem
 .main > group.col-2l > *:last-child { width: 25%; }
 .main > group.col-2l > *:nth-child(2n+1) { clear: left; }
 
-group > item { float: left; display: block; }
+group > item { float: left; display: block; margin: 12px 0; }
+group > item > title { margin: 0 20px; display: block; padding: 0 10px; color: rgba(255,255,255,1); text-shadow: 1px 1px 3px rgba(0,0,0,.8); background: linear-gradient(177deg, rgba(0,0,0,.5), rgba(156, 47, 0, 0.5)); border-radius: 6px; text-transform: uppercase; font-size: 0.75rem; line-height: 28px; height: 28px; }
+group > item > data { margin: 0 20px; display: block; padding: 10px 10px 0 10px; font-size: 0.9rem; }
 
 .main gauge { display: block; position: relative; }
 .main gauge > header { display: block; position: relative; height: 6px; width: 100%; }
@@ -72,7 +74,8 @@ group > item { float: left; display: block; }
 .main gauge > header > icon.stopwatch { background-image: url(stopwatch-solid.svg); }
 .main gauge > content { position: relative; display: block; background-color: #ffffff; margin: 10px; z-index: 99; box-shadow: 2px 2px 8px #c4c4c4; border-radius: 10px; background: linear-gradient(#ffffff, #fafafa, #f3f3f3);  }
 .main gauge > content > metric { display: block; padding: 20px 20px 0 20px; text-align: right; font-size: 2rem; font-weight: bold; border-radius: 10px; line-height: 36px; height: 36px; overflow: hidden; }
-.main gauge > content > divider { display: block; background: linear-gradient(90deg, transparent, #cccccc); height: 1px; margin-top: 8px;}
+.main gauge > content > image-tile { display: block; width: 100%; height: 150px; overflow: hidden; background-color: #676767; border-top-left-radius: 6px; border-top-right-radius: 6px; }
+.main gauge > content > divider { display: block; background: linear-gradient(90deg, transparent, #cccccc); height: 1px; margin-top: 8px;  }
 .main gauge > content > title { display: block; color: #777777; text-align: right; padding: 8px 20px 10px 8px; text-transform: uppercase; font-size: 0.7rem; overflow: hidden; max-width: 100%; white-space: nowrap; }
 
 .main list { display: block; position: relative; }
@@ -135,15 +138,28 @@ footer a:hover { color: #000; }
 .scroll-box { display: block;overflow-y: scroll; border-top: 1px solid rgba(0, 0, 0, .2);}
 
 .page-section#dashboard .main table th,
-.page-section#devices .main table th { border-bottom: none; }
+.page-section#devices .main table th,
+.page-section#skills .main table th,
+.page-section#logs .main table th { border-bottom: none; }
+
 .page-section#devices .main table th,
 .page-section#devices .main table td { width: 33%; }
-.page-section#devices .scroll-box { height: 250px; }
+
+.page-section#skills .main table th,
+.page-section#skills .main table td { width: 33%; }
+
+.page-section#logs .main table th,
+.page-section#logs .main table td { width: 33%; }
+
+.page-section#devices .scroll-box,
+.page-section#skills .scroll-box,
+.page-section#logs .scroll-box { height: 250px; }
+
 .page-section#dashboard .scroll-box { max-height: 120px; }
 .page-section#dashboard table group { text-align: right; }
 
-.page-section .settings > group { margin: 0; }
-.page-section .settings { padding: 20px; background-color: #ebebeb; margin-right: 20px; border-radius: 6px; box-shadow: 3px 3px 12px rgba(0,0,0,.4); }
+.page-section .settings > group { margin: -12px 0; }
+.page-section .settings { padding: 20px 0; background-color: #ebebeb; margin-right: 20px; border-radius: 6px; box-shadow: 3px 3px 12px rgba(0,0,0,.4); }
 
 @media screen and (max-width: 1024px) {
     page > content > section,
@@ -168,6 +184,13 @@ footer a:hover { color: #000; }
     .main > group.col-2l > *,
     .main > group.col-2l > *:first-child,
     .main > group.col-2l > *:last-child { width: 100%; }
+    .main > group.col-2 > *,
+    .secondary content > group.col-2 > * { width: 100%; clear: left; }
+    .main > group.col-3 > * { width: 50%; }
+    .main > group.col-3 > *:nth-child(3n-1) { width: 50%; }
+    .main > group.col-3 > *:nth-child(3n+1) { clear: none; }
+    .main > group.col-3 > *:nth-child(2n+1) { clear: left; }
+
 }
 
 </style>
@@ -194,7 +217,7 @@ $(document).ready(function() {
 
 <page>
     <div class="shortnav">
-        <ul>
+        <ul></button-list>
             <li><span>KENZY</span></li>
             <li><a href="#" id="nav-bars"><i class="icon-bars"></i></a></li>
         </ul>
@@ -380,7 +403,7 @@ $(document).ready(function() {
                                     This is a long test long long test
                                     This is a long test long long test
                                     This is a long test long long test
-                                </monospace>
+                                </monospace>:
                             </td>
                         </tr>
                         <tr>
@@ -461,42 +484,47 @@ $(document).ready(function() {
             <content class="settings">
                 <group class="col-2">
                 <item>
-                    <div>Type:</div>
-                    <div>kenzy.skillmanager</div>
+                    <title>Type</title>
+                    <data>kenzy.skillmanager</data>
                 </item>
                 
                 <item>
-                    <div>URL:</div>
-                    <div>http://192.168.1.140:9700</div>
+                    <title>URL</title>
+                    <data>http://192.168.1.140:9700</data>
                 </item>
 
                 <item>
-                    <div>Location:</div>
-                    <div>Living Room</div>
+                    <title>Location</title>
+                    <data>Living Room</data>
                 </item>
 
                 <item>
-                    <div>Group:</div>
-                    <div>Group 1</div>
+                    <title>Group</title>
+                    <data>Group 1</data>
                 </item>
 
                 <item>
-                    <div>Status:</div>
-                    <div>Running</div>
+                    <title>Status</title>
+                    <data>Running</data>
                 </item>
                 
                 <item>
-                    <div>Accepts:</div>
-                    <div>start, stop, mute, unmute, collect</div>
+                    <title>Accepts</title>
+                    <data>start, stop, mute, unmute, collect</data>
                 </item>
 
                 <item>
-                    <div>Settings</div>
-                    <div>...</div>
+                    <title>Settings</title>
+                    <data>...</data>
                 </item>
                 <item>
-                    <button>Start</button>
-                    <button>Stop</button>
+                    <title>Actions</title>
+                    <data>
+                    <button-list>
+                        <button>Start</button>
+                        <button>Stop</button>
+                    </button-list>
+                    </data>
                 </item>
                 </group>
                 <group></group>
@@ -510,52 +538,46 @@ $(document).ready(function() {
                 <subtitle>Overview</subtitle>
             </header>
             <content class="main">
-                <group class="top-row col-4">
+                <group class="top-row col-3">
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>23</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Garage Front Camera</title>
                         </content>
                     </gauge>
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>406</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Front Porch Camera</title>
                         </content>
                     </gauge>
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>99</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Back Porch Camera</title>
                         </content>
                     </gauge>
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>192d 13h</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Garage Side Camera</title>
                         </content>
                     </gauge>
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>99</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Crawl Space Camera</title>
                         </content>
                     </gauge>
                     <gauge>
                         <header></header>
                         <content>
-                            <metric>192d 13h</metric>
-                            <divider></divider>
+                            <image-tile></image-tile>
                             <title>Back Yard Camera</title>
                         </content>
                     </gauge>
@@ -571,7 +593,48 @@ $(document).ready(function() {
                 <subtitle>Overview</subtitle>
             </header>
             <content class="main">
-            test
+                <group class="col-1">
+                    <list>
+                        <content>
+                            <table class="header">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Type</th>
+                                        <th class="text-left">URL</th>
+                                        <th class="text-left">Location</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                            <div class="scroll-box">
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td><content>kenzy.stt</content></td>
+                                        <td><content>http://192.168.1.140:9701</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.tts</content></td>
+                                        <td><content>http://192.168.1.140:9702</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.image</content></td>
+                                        <td><content>http://192.168.1.140:9703</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.skillmanager</content></td>
+                                        <td><content>http://192.168.1.140:9700</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            </div>
+                        </content>
+                    </list>
+                </group>
+                <group></group>
             </content>
         </section>
     </content>
@@ -582,7 +645,48 @@ $(document).ready(function() {
                 <subtitle>Overview</subtitle>
             </header>
             <content class="main">
-            test
+                <group class="col-1">
+                    <list>
+                        <content>
+                            <table class="header">
+                                <thead>
+                                    <tr>
+                                        <th class="text-left">Type</th>
+                                        <th class="text-left">URL</th>
+                                        <th class="text-left">Location</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                            <div class="scroll-box">
+                            <table>
+                                <tbody>
+                                    <tr>
+                                        <td><content>kenzy.stt</content></td>
+                                        <td><content>http://192.168.1.140:9701</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.tts</content></td>
+                                        <td><content>http://192.168.1.140:9702</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.image</content></td>
+                                        <td><content>http://192.168.1.140:9703</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                    <tr>
+                                        <td><content>kenzy.skillmanager</content></td>
+                                        <td><content>http://192.168.1.140:9700</content></td>
+                                        <td><content>Living Room</content></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            </div>
+                        </content>
+                    </list>
+                </group>
+                <group></group>
             </content>
         </section>
     </content>
@@ -602,7 +706,11 @@ $(document).ready(function() {
             <content>
                 <divider></divider>
                 <footer>
-                    KENZY {version} | <a href="https://docs.kenzy.ai">Documentation</a> | <a href="https://kenzy.ai/blog">Blog</a> | <a href="https://github.com/lnxusr1/kenzy/issues">Issues</a>
+                    KENZY {version} | <a href="https://docs.kenzy.ai">Documentation</a> 
+                    &nbsp;|&nbsp; 
+                    <a href="https://kenzy.ai/blog">Blog</a> 
+                    &nbsp;|&nbsp; 
+                    <a href="https://github.com/lnxusr1/kenzy/issues">Issues</a>
                 </footer>
             </content>
         </section>
